--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
-    <script src="http://rawgit.com/angular-ui/angular-google-maps/2.1.5/dist/angular-google-maps.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>"
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/elasticsearch/11.0.1/elasticsearch.angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
+    <script src="https://rawgit.com/angular-ui/angular-google-maps/2.1.5/dist/angular-google-maps.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>"
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.js"></script>
@@ -12,20 +13,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="/server/public/stylesheets/index.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type = "text/javascript">
-        $(document).ready(function(){
-            $("#searchForm").submit(function(){
-                var options = {
-
-                }
-            })
-        })
-    </script>
 
 
 </head>
 <body class="pageBody">
-<div class="content">
+<div class="content" ng-app = "MySearchEngine" ng-controller = "searchCtrl">
     <div class="coverPic">
         <img class="headpic" src="https://image.freepik.com/free-vector/twitter-social-network-icon-vector_652139.jpg">
     </div>
@@ -33,15 +25,19 @@
         <div class="input_title">
             <h2 class = "twitterTitle"> Find Twitts Near You</h2>
         </div>
-        <div class ="input_message">
-            <form id="searchForm" name="searchForm" action="/" method="post">
-                <input id="SearchContent" type="text" class="form-control" placeholder="Search Text">
-                <input id="Latitude" type="value" class="form-control" placeholder="City">
-                <input id="Longitude" type="value" class="form-control" placeholder="State">
+        <section class ="input_message">
+            <form ng-submit="search()">
+                <input id="SearchContent" type="text" class="form-control" placeholder="Search Text" ng-model ="searchtext">
+                <input id="Latitude" type="value" class="form-control" placeholder="City" ng-model = "searchCity">
+                <input id="Longitude" type="value" class="form-control" placeholder="State" ng-model="searchState">
                 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
             </form>
-        </div>
+        </section>
     </div>
+    <section class = "result">
+        <div class = "no-res" ng-hide = "info.length">No Results</div>
+        <
+    </section>
     <div id = "googleMap" ng-app = "ngMap">
         <ng-map center="[40.74, -74.18]"></ng-map>
     </div>
