--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-    <script src = "https://cdnjs.cloudflare.com/ajax/libs/elasticsearch/11.0.1/elasticsearch.angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
     <script src="https://rawgit.com/angular-ui/angular-google-maps/2.1.5/dist/angular-google-maps.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
@@ -11,13 +10,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link rel="stylesheet" href="/server/public/stylesheets/index.css">
+    <link rel="stylesheet" href="server/public/stylesheets/index.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    <script>
+        $.('#submit_btn').onclick(function(){
+            $.ajax({
+                'url' : "http://localhost:8000/search_res",
+                'data' : {"text" : $('#searchContent').val(), "city":$('#city').val(), "state":$('#state').val()},
+                'success' : function(data) {
+                    $scope.data = data;
+                },
+                'type':'post',
+                'dataType' : 'json'
+            });
+        });
+    </script>
 
 </head>
 <body class="pageBody">
-<div class="content" ng-app = "MySearchEngine" ng-controller = "searchCtrl">
+<div class="content">
     <div class="coverPic">
         <img class="headpic" src="https://image.freepik.com/free-vector/twitter-social-network-icon-vector_652139.jpg">
     </div>
@@ -25,22 +36,28 @@
         <div class="input_title">
             <h2 class = "twitterTitle"> Find Twitts Near You</h2>
         </div>
-        <section class ="input_message">
-            <form ng-submit="search()">
+        <div class ="input_message">
+            <form id="searchForm" name="searchForm" action="/" method="post">
                 <input id="SearchContent" type="text" class="form-control" placeholder="Search Text" ng-model ="searchtext">
-                <input id="Latitude" type="value" class="form-control" placeholder="City" ng-model = "searchCity">
-                <input id="Longitude" type="value" class="form-control" placeholder="State" ng-model="searchState">
-                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+                <input id="city" type="value" class="form-control" placeholder="City" ng-model = "searchCity">
+                <input id="state" type="value" class="form-control" placeholder="State" ng-model="searchState">
+                <button id = "submit_btn" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
             </form>
-        </section>
+        </div>
     </div>
-    <section class = "result">
+    <!--<section class = "result">
         <div class = "no-res" ng-hide = "info.length">No Results</div>
         <
     </section>
     <div id = "googleMap" ng-app = "ngMap">
         <ng-map center="[40.74, -74.18]"></ng-map>
     </div>
+    <div ng-repeat="x in data">
+        <img ng-src = 'x.image_url' class='photos'>
+        <p class = "name">{{data.user}}</p>
+        <p class = "text">{{data.text}}</p>
+    </div>
 </div>
 </body>
+<script src = "server/search.js"></script>-->
 </html>
